# computer_vision_python

./: .gitignore  README.md  main.py  pyproject.toml
cifar_10/: compare.py  run_jax.py  run_mlx.py
cifar_10/my_jax/: model.py
cifar_10/my_mlx/: model.py
deep_learning/: 05-DL-CV-Assessment.ipynb  78_cnn_cifar10.ipynb  80_deep_learning_custom_images.ipynb  cnn_cifar_evaluation.ipynb
deep_learning/hand_segmentation/: capstone.py
opencv_learning/course_assessments/: 03-Numpy-and-Image-Assessment.ipynb  04-Image-Basics-Assessment.ipynb  07-Image-Processing-Assessment.ipynb  10-Detection-Assessment-Solution.ipynb
opencv_learning/cv_video/: 36_connecting_camera.py  37_using_video_script.py
opencv_learning/fundamentals/: 14_drawing_with_cv2.ipynb  16_mouse_events.py  18_mouse_events.py  23_blending_pasting_images.ipynb  25_thresholding.ipynb  28_morphological_operators.ipynb  29_gradients.ipynb  30_histograms.ipynb  assesment_mouse_draw.py
opencv_learning/object_detection/: 42_template_matching.ipynb  43_corner_detection.ipynb  45_edge_detection.ipynb  46_grid_detection.ipynb  47_contour_detection.ipynb
opencv_learning/vision_applications/: 48_feature_matching.ipynb  50_watershed.ipynb  52_custom_seeds_watershed.py  54_face_detection.ipynb  59_optical_flow_sparse.py  60_optical_flow_dense.py  62_meanshift.py  64_face_tracking.py  live_face_detection.py
resources/01-Image-Basics-with-OpenCV/: 02-Drawing-on-Images.ipynb
resources/02-Image-Processing/: 01-Blending-and-Pasting-Images.ipynb  04-Morphological-Operators.ipynb
(+16 files in other folders)
