[project]
name = "computer-vision-jax-mlx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flax>=0.12.2",
    "jupyter>=1.1.1",
    "jupyter-contrib-nbextensions>=0.7.0",
    "mlx>=0.30.1",
    "numpy>=2.4.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "tensorflow-datasets>=4.9.9",
]
