[project]
name = "computer-vision-python"
version = "0.1.0"
description = "Learning CV concepts using python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pillow>=12.1.0",
    "plotly>=6.5.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]
